--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,23 +11,16 @@ phases:
     - aws s3 cp --debug s3://ai-bricks/au-dttl-modelops-models-artifacts/1-incoming/1-incoming_postprocess_est_model.pkl ./
     - aws s3 cp --debug s3://ai-bricks/au-dttl-mlops-data-demo/test.csv ./
   build:
+    #on-failure: ABORT
     commands:
-    - python test_model.py 1-incoming_postprocess_est_model.pkl test.csv configuration.json model_metrics.json
-    # - echo "Zipping deployment package..."
-    # - cd lib
-    # - zip -r9 ../deployment_package.zip .
-    # - cd ..
-    # - zip -g deployment_package.zip lambda_function.py
+    - python test_model.py 1-incoming_postprocess_est_model.pkl test.csv configuration.json model_metrics.json > log.txt
     
   post_build:
     commands:
-    - aws s3 cp 1-incoming_postprocess_est_model.pkl s3://ai-bricks/au-dttl-modelops-models-artifacts/2-archive/2-archive_postprocess_est_model.pkl
-    - aws s3 cp model_metrics.json s3://ai-bricks/au-dttl-modelops-models-artifacts/2-archive/model_metrics.json
-    - aws s3 cp 1-incoming_postprocess_est_model.pkl s3://ai-bricks/au-dttl-modelops-models-artifacts/3-live/3-live_postprocess_est_model.pkl 
-
-    #- echo "Updating lambda Function..."
-    # - aws lambda update-function-code --function-name github-to-lambda --zip-file fileb://deployment_package.zip
-    #- echo "DONE!!"
+    - aws aws s3 cp log.txt s3://ai-bricks/au-dttl-modelops-models-artifacts/2-archive/log.txt
+    #- aws s3 cp 1-incoming_postprocess_est_model.pkl s3://ai-bricks/au-dttl-modelops-models-artifacts/2-archive/2-archive_postprocess_est_model.pkl
+    #- aws s3 cp model_metrics.json s3://ai-bricks/au-dttl-modelops-models-artifacts/2-archive/model_metrics.json
+    #- aws s3 cp 1-incoming_postprocess_est_model.pkl s3://ai-bricks/au-dttl-modelops-models-artifacts/3-live/3-live_postprocess_est_model.pkl 
 
 # Moji's yaml with our links included:
 # steps:
