--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,13 +13,12 @@ phases:
   build:
     on-failure: ABORT
     commands:
-    - python test_model_simple.py > log.txt
-    - aws s3 cp log.txt s3://ai-bricks/au-dttl-modelops-models-artifacts/2-archive/log.txt
+    - python test_model_simple.py
     
   post_build:
     commands:
     - aws s3 cp 1-incoming_postprocess_est_model.pkl s3://ai-bricks/au-dttl-modelops-models-artifacts/2-archive/2-archive_postprocess_est_model.pkl
-    #- aws s3 cp model_metrics.json s3://ai-bricks/au-dttl-modelops-models-artifacts/2-archive/model_metrics.json
+    - #aws s3 cp model_metrics.json s3://ai-bricks/au-dttl-modelops-models-artifacts/2-archive/model_metrics.json
     - aws s3 cp 1-incoming_postprocess_est_model.pkl s3://ai-bricks/au-dttl-modelops-models-artifacts/3-live/3-live_postprocess_est_model.pkl 
 
 # Moji's yaml with our links included:
