change to build

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,7 +13,7 @@ phases:
   build:
     on-failure: ABORT
     commands:
-    - python test_model.py 1-incoming_postprocess_est_model.pkl test.csv configuration.json model_metrics.json
+    - python test_model.py s3://ai-bricks/au-dttl-modelops-models-artifacts/1-incoming/1-incoming_postprocess_est_model.pkl s3://ai-bricks/au-dttl-mlops-data-demo/test.csv configuration.json model_metrics.json
     
   post_build:
     commands:
