--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,13 +13,14 @@ phases:
   build:
     on-failure: ABORT
     commands:
-    - python3 test_model.py 1-incoming_HealthHiRiskLogReg.pkl test.csv configuration.json model_metrics.json
+    - python3 test_model.py 1-incoming_HealthHiRiskLogReg.pkl test.csv configuration.json model_metrics.json > output.txt
     
   post_build:
     commands:
     - aws s3 cp 1-incoming_HealthHiRiskLogReg.pkl s3://ai-bricks/au-dttl-modelops-models-artifacts/2-archive/2-archive_HealthHiRiskLogReg.pkl
     - aws s3 cp model_metrics.json s3://ai-bricks/au-dttl-modelops-models-artifacts/2-archive/model_metrics.json
-    - aws s3 cp 1-incoming_HealthHiRiskLogReg.pkl s3://ai-bricks/au-dttl-modelops-models-artifacts/3-live/3-live_HealthHiRiskLogReg.pkl 
+    - aws s3 cp 1-incoming_HealthHiRiskLogReg.pkl s3://ai-bricks/au-dttl-modelops-models-artifacts/3-live/3-live_HealthHiRiskLogReg.pkl
+    - aws s3 cp output.txt s3://ai-bricks/au-dttl-modelops-models-artifacts/2-archive/output.txt
 
 # Moji's yaml with our links included:
 # steps:
