--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,7 +15,7 @@ phases:
     commands:
     - python3 test_model.py 1-incoming_HealthHiRiskLogReg.pkl test.csv configuration.json model_metrics.json > output.txt
     - aws s3 cp output.txt s3://ai-bricks/au-dttl-modelops-models-artifacts/2-archive/output.txt
-    - python3 test_model_final.py 1-incoming_HealthHiRiskLogReg.pkl test.csv configuration.json model_metrics.json > output.txt
+    - python3 test_model_final.py 1-incoming_HealthHiRiskLogReg.pkl test.csv configuration.json model_metrics.json
     
   post_build:
     commands:
